testsuite/tests/parser/should_fail/cmdFail007.stderr

cmdFail007.hs:5:7: error: [GHC-03790]
    Parse error in command:
      (_ -< _) {a = _ -< _, b = _ -< _, c = _ -< _}
